@@ -1,12 +1,8 @@
 package io.oopy.coding.common.config.security;
 
-import io.oopy.coding.common.util.cookie.CookieUtil;
-import io.oopy.coding.common.util.jwt.JwtUtil;
 import io.oopy.coding.common.security.handler.JwtAccessDeniedHandler;
 import io.oopy.coding.common.security.handler.JwtAuthenticationEntryPoint;
-import io.oopy.coding.common.util.redis.forbidden.ForbiddenTokenService;
-import io.oopy.coding.common.util.redis.refresh.RefreshTokenService;
-import io.oopy.coding.common.security.authentication.UserDetailServiceImpl;
+import io.oopy.coding.common.util.jwt.AuthConstants;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
@@ -24,7 +20,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
+
+import static org.springframework.http.HttpHeaders.SET_COOKIE;
 
 @Configuration
 @EnableWebSecurity
@@ -32,6 +30,7 @@ import java.util.Arrays;
 @RequiredArgsConstructor
 public class SecurityConfig {
     private final JwtSecurityConfig jwtSecurityConfig;
+    private List<String> corsOrigins = List.of("http://localhost:3000");
 
     private final String[] webSecurityIgnoring = {
             "/",
@@ -41,8 +40,9 @@ public class SecurityConfig {
             "/v3/api-docs/**", "/swagger-ui/**", "/swagger",
             "/api/v1/users/login", "/api/v1/users/refresh",
             "/api/v1/auth/login/**", "/api/v1/auth/signup",
-            "/login/oauth2/**", "/api/v1/contents/get",
-            "api/v1/comments/get"
+            "/api/v1/contents/get", "api/v1/comments/get"
+            "/api/v1/profile/**",
+            "/login/oauth2/**", "/api/v1/feed/title", "/api/v1/feed/body"
     };
 
     @Bean
@@ -59,7 +59,7 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity httpSecurity) throws Exception {
         httpSecurity.csrf(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
-                .cors((cors) -> cors.configurationSource(corsConfigurationSource()))
+                .cors(httpSecurityCorsConfigurer -> corsConfigurationSource())
                 .formLogin(AbstractHttpConfigurer::disable)
                 .logout(AbstractHttpConfigurer::disable)
                 .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
@@ -86,10 +86,13 @@ public class SecurityConfig {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() { // Localhost 환경 cors
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.addAllowedOrigin("http://localhost:3000");
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
+        configuration.setAllowedOrigins(corsOrigins);
+        configuration.setAllowedMethods(List.of("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setMaxAge(3600L);
+        configuration.setExposedHeaders(List.of(SET_COOKIE, "accessToken", AuthConstants.REFRESH_TOKEN.getValue()));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
